# LibCMaker_HarfBuzz

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_harfbuzz.cmake  lib_cmaker_harfbuzz.cmake
ci/: ci_lib_params.sh
cmake/: FindFreetype.cmake  FindHarfBuzz.cmake  cmr_build_rules_harfbuzz.cmake  cmr_find_package_harfbuzz.cmake  cmr_get_download_params_harfbuzz.cmake
cmake/modules/: FindHarfBuzz.cmake  cmr_build_rules_harfbuzz.cmake  cmr_get_download_params_harfbuzz.cmake  cmr_harfbuzz_cmaker.cmake  cmr_harfbuzz_get_download_params.cmake
cmake/modules/harfbuzz-1.8.6/: CMakeLists.txt
example/TestCompileWithHarfBuzz/: CMakeLists.txt
patch/harfbuzz-1.8.6/: CMakeLists.txt
patch/harfbuzz-1.8.6/src/: hb-private.hh
patch/harfbuzz-2.9.1/: CMakeLists.txt
patch/harfbuzz-3.0.0/: CMakeLists.txt
patch/harfbuzz-3.0.0/src/: hb-blob.cc  hb.hh
samples/TestCompileWithHarfBuzz/: CMakeLists.txt  README.md
samples/TestCompileWithHarfBuzz/src/: example.cpp
samples/TestCompileWithHarfBuzz/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt
samples/ci_sample/src/: example_test.cpp
samples/ci_sample/test/: CMakeLists.txt
